--- a/PopIII_IMF_fit.ipynb
+++ b/PopIII_IMF_fit.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "import import_ipynb\n",
-    "import Press-Schechter.ipynb"
+    "import PressSchechter.ipynb"
    ]
   },
   {
