--- a/PressSchechter.ipynb
+++ b/PressSchechter.ipynb
@@ -23,12 +23,13 @@
     "\t'mathtext.rm': 'serif',\n",
     "\t'font.weight': 'normal',\n",
     "\t'font.size': 10})\n",
-    "plt.rcParams.update({'font.size': 10})\n"
+    "plt.rcParams.update({'font.size': 10})\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,8 @@
     "    def __init__(self, h=0.73, omega_m=0.27,omega_l=0.73):\n",
     "        self.omega_m0 = omega_m\n",
     "        self.omega_l0 = omega_l\n",
-    "        self.H_0=h*100\n",
+    "        self.H_0=((h*100*u.km*u.s**-1*u.Mpc**-1).to(u.yr**-1)).value\n",
+    "        print(self.H_0)\n",
     "    \n",
     "    \"\"\"\n",
     "    We need to create a growth factor function. Which depends on the cosmological model.\n",
