--- a/PressSchechter.ipynb
+++ b/PressSchechter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,8 @@
     "    \n",
     "\n",
     "    def Time(self, z):\n",
-    "        #return ((2*self.H_0**(-1))/(1+(1+z)**2))\n",
-    "        return 2/(3*self.H_0*(1+z)**(3/2))\n",
+    "        return ((2*self.H_0**(-1))/(1+(1+z)**2))\n",
+    "        #return 2/(3*self.H_0*(1+z)**(3/2))\n",
     "\n",
     "    #hubble\n",
     "    def E_of_z(self, redshift):\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
