--- a/Classes.ipynb
+++ b/Classes.ipynb
@@ -666,7 +666,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.3 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -680,12 +680,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.3 (default, Jul  2 2020, 11:26:31) \n[Clang 10.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "881a562e02f309c4fd10f2c8ec208fcd46499745ebb69d5957db3412b8336f91"
+    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
    }
   }
  },
