--- a/PressSchechter.ipynb
+++ b/PressSchechter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,9 @@
     "from astropy import units as u\n",
     "import scipy.interpolate\n",
     "import math\n",
+    "from sympy import symbols, solve\n",
+    "\n",
+    "\n",
     "\n",
     "mpl.rcParams['agg.path.chunksize'] = 10000\n",
     "plt.rcParams.update({\n",
@@ -29,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +40,8 @@
     "    def __init__(self, h=0.73, omega_m=0.27,omega_l=0.73):\n",
     "        self.omega_m0 = omega_m\n",
     "        self.omega_l0 = omega_l\n",
-    "        self.H_0=((h*100*u.km*u.s**-1*u.Mpc**-1).to(u.yr**-1)).value\n",
-    "        print(self.H_0)\n",
+    "        self.H_0=((h*100*u.km*u.s**-1*u.Mpc**-1).to(u.Gyr**-1)).value\n",
+    "        self.h=h\n",
     "    \n",
     "    \"\"\"\n",
     "    We need to create a growth factor function. Which depends on the cosmological model.\n",
@@ -51,14 +54,15 @@
     "        return ((2*self.H_0**(-1))/(1+(1+z)**2))\n",
     "        #return 2/(3*self.H_0*(1+z)**(3/2))\n",
     "\n",
+    "\n",
     "    #hubble\n",
     "    def E_of_z(self, redshift):\n",
     "        \"\"\"\n",
     "        E(z) which describe the evolution of H(z)=E(z)*H0\n",
     "        \"\"\"\n",
-    "        Ez = np.sqrt(self.omega_l0 + (1.0 - self.omega_l0 \n",
+    "        Ez = (self.omega_l0 + (1.0 - self.omega_l0 \n",
     "            - self.omega_m0) * (1.0+redshift)**2 \n",
-    "            + self.omega_m0 * (1.0+redshift)**3)\n",
+    "            + self.omega_m0 * (1.0+redshift)**3)**(1/2)\n",
     "\n",
     "        return Ez\n",
     "\n",
@@ -72,7 +76,7 @@
     "\n",
     "    def g_of_z(self, redshift):\n",
     "        \"\"\"\n",
-    "        growth suppression factor\n",
+    "        growth linear factor\n",
     "        \"\"\"\n",
     "\n",
     "        gz = 2.5 * self.omega_mz(redshift) / (self.omega_mz(redshift)**(4/7) \n",
@@ -93,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +135,7 @@
     "        self.kpivot = 2e-3\n",
     "\n",
     "        self.D_of_z = Growth.D_of_z\n",
+    "        self.g_of_z = Growth.g_of_z\n",
     "\n",
     "        #Normalization of the power spectrum\n",
     "        self.N=1\n",
@@ -258,23 +263,46 @@
     "\n",
     "    def Sigma_of_M_and_z(self, M, interpolate):\n",
     "        return self.D_of_z(self.redshift)*interpolate(np.log10(M))\n",
-    "    \n",
-    "    def output(self, ):\n",
-    "        for i in range(3):\n",
-    "            name=['TopHat', 'Gaussian', 'KSharp']\n",
-    "            plt.plot(self.M, self.Sigma_of_M_and_z(self.M, self.interpolates[i]), label = f'{name[i]}')\n",
     "\n",
-    "        plt.xscale('log')\n",
-    "        plt.xlabel('$M/M_{\\odot}$')\n",
-    "        plt.ylabel('$\\sigma$')\n",
-    "        plt.yscale('log')\n",
-    "        plt.legend()\n",
-    "        return\n"
+    "    def FormationRedshift(self, M, interpolate):\n",
+    "\n",
+    "        sigma = interpolate(np.log10(M))\n",
+    "\n",
+    "        z = symbols('z')\n",
+    "        expr = self.g_of_z(z)*sigma - 1.686\n",
+    "        \n",
+    "        return solve(expr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Overdensity = Overdensities(0)\n",
+    "\n",
+    "\n",
+    "# M = np.logspace(4, 15, 5)\n",
+    "# z_f=np.empty(5, dtype=object)\n",
+    "# for i in range(len(M)):\n",
+    "\n",
+    "#     z_f[i]= Overdensity.FormationRedshift(M[i], Overdensity.interpolates[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.plot(M, z_f)\n",
+    "# print(z_f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,32 +380,24 @@
     "        b = 1.406\n",
     "        c = 1.210\n",
     "        return A*( np.power(b / sigma, 1.0*a) + 1)*np.exp(-1.0*c / sigma / sigma )\n",
-    "\n",
-    "    def output(self):\n",
-    "        name=['TopHat', 'Gaussian', 'KSharp']\n",
-    "        for i in range(3):\n",
-    "            plt.plot(self.M, self.dndms[i], label = f'{name[i]}')\n",
-    "        plt.xscale('log')\n",
-    "        plt.xlabel('$M/M_{\\odot}$')\n",
-    "        plt.ylabel('$IMF$')\n",
-    "        plt.yscale('log')\n",
-    "        # plt.xlim(1e7,1e18)\n",
-    "        # plt.ylim(1e-12,100)\n",
-    "        plt.legend()\n",
-    "        plt.ylim(1e-12,1e1)\n",
-    "        plt.xlim(1e7,1e18)\n",
-    "        return \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MergerRate():\n",
-    "    def __init__(self,redshift, redshift_lim = (0, 12), M_1=5e13, omega_m=0.27, omega_l=0.73, h=0.73, ns=0.95, sigma8=0.8, Nbins=50, logmass_lim=(6, 20)):\n",
+    "    def __init__(self, redshift, redshift_lim = (0, 12), M_1=5e13, omega_m=0.27, omega_l=0.73, h=0.73, ns=0.95, sigma8=0.8, Nbins=50, logmass_lim=(6, 20)):\n",
     "        self.omega_m0 = omega_m\n",
     "        self.omega_l0 = omega_l\n",
     "        self.logmass_lim = logmass_lim\n",
@@ -428,51 +448,40 @@
     "\n",
     "            der , sigma2 = self.logderivative(thisM2, interpolate)\n",
     "\n",
-    "            MR[i] = (2/np.pi)**(1/2)/self.Time(self.redshift)*2/3*thisDM/thisM2*np.abs(der)*self.Delta_c(self.redshift)/sigma2/(1-(sigma2/sigma1)**2)**(3/2)*np.exp(-0.5*self.Delta_c(self.redshift)**2*(1/sigma2**2-1/sigma1**2))\n",
+    "            MR[i] = 3/1e-3*(2/np.pi)**(1/2)/self.Time(self.redshift)*2/3*thisDM/thisM2*np.abs(der)*self.Delta_c(self.redshift)/sigma2/(1-(sigma2/sigma1)**2)**(3/2)*np.exp(-0.5*self.Delta_c(self.redshift)**2*(1/sigma2**2-1/sigma1**2))\n",
     "            DeltaM[i] = thisDM\n",
     "            LogdeltaM[i] = thislogDM\n",
-    "\n",
-    "        # if self.redshift==1:\n",
-    "        #     MR=0.5*MR\n",
-    "        # elif self.redshift==0:\n",
-    "        #     MR = 1.35*MR\n",
     "\n",
     "        return MR, DeltaM, LogdeltaM\n",
     "\n",
     "\n",
     "\n",
     "    \"\"\"Create a merger rate at a fixed final mass in terms of the redshift\"\"\"\n",
-    "    def MergerRate_of_M2z(self, M2, M1):\n",
-    "\n",
-    "        MRs_z = np.empty(self.Nbins, dtype=object)\n",
-    "        z = np.empty(self.Nbins, dtype=object)\n",
-    "        dz = (self.redshift_max_lim - self.redshift_min_lim)/self.Nbins\n",
+    "    \n",
+    "    def MergerRate_M_Z(self, M2, M1, Z):\n",
     "\n",
     "        overden = Overdensities(0, omega_m=self.omega_m0, omega_l=self.omega_l0, h=self.h, ns=self.ns, sigma8=self.sigma8, \n",
     "        Nbins_Sigma = self.Nbins, logmass_lim=self.logmass_lim)\n",
     "\n",
-    "        interpolate = overden.interpolates[0]\n",
+    "        interpolate = overden.interpolates[1]\n",
     "\n",
     "        der, sigma2 = self.derivative2(M2, interpolate)\n",
     "        sigma1 = interpolate(np.log10(M1))\n",
     "\n",
-    "        for i in range(self.Nbins):\n",
-    "            thisz = self.redshift_min_lim + i*dz\n",
-    "            z[i] = thisz\n",
-    "                \n",
-    "            MRs_z[i] = M2/(2*np.pi)**(1/2)*np.abs(2/3*self.Delta_c(thisz)/self.Time(thisz)*der)*((sigma1/sigma2)**2/(sigma1**2-sigma2**2))**(3/2)*np.exp(-0.5*self.Delta_c(thisz)**2*(1/sigma2**2-1/sigma1**2))\n",
+    "        MR = M2/(2*np.pi)**(1/2)*np.abs(2/3*self.Delta_c(Z)/self.Time(Z)*der)*((sigma1/sigma2)**2/(sigma1**2-sigma2**2))**(3/2)*np.exp(-0.5*self.Delta_c(Z)**2*(1/sigma2**2-1/sigma1**2))\n",
     "\n",
-    "        return z, MRs_z\n",
+    "        return MR\n",
+    "\n",
     "            \n",
     "    def logderivative(self, M, interpolate):\n",
     "        sigma = interpolate(np.log10(M))\n",
-    "        sigma_plus = interpolate(1.01*np.log10(M))\n",
-    "        return (np.log(sigma_plus)-np.log(sigma))/np.log(0.01*M), sigma\n",
+    "        sigma_plus = interpolate(np.log10(1.1*M))\n",
+    "        return (np.log(sigma_plus)-np.log(sigma))/np.log(0.1*M), sigma\n",
     "    \n",
     "    def derivative2(self, M, interpolate):\n",
     "        sigma = interpolate(np.log10(M))\n",
-    "        sigma_plus = interpolate(1.00001*np.log10(M))\n",
-    "        return (sigma_plus*sigma_plus-sigma*sigma)/(0.00001*M), sigma\n",
+    "        sigma_plus = interpolate(np.log10(1.00000000001*M))\n",
+    "        return (sigma_plus*sigma_plus-sigma*sigma)/(0.00000000001*M), sigma\n",
     "    \n",
     "    def Delta_c_derivative(self, z):\n",
     "        DT = self.Delta_c(z)\n",
@@ -492,19 +501,32 @@
     "        plt.yscale('log')\n",
     "        plt.plot(a, b)\n",
     "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "    "
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = symbols('x')\n",
+    "a=np.arange(0,10)\n",
+    "s=[]\n",
+    "for i in range(len(a)):\n",
+    "    s.append(solve(x-4-a[i])[0])\n",
+    "\n",
+    "\n",
+    "print(s[0])\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -530,7 +552,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -549,7 +571,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+    "hash": "881a562e02f309c4fd10f2c8ec208fcd46499745ebb69d5957db3412b8336f91"
    }
   }
  },
