--- a/PressSchechter.ipynb
+++ b/PressSchechter.ipynb
@@ -396,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MergerRate():\n",
+    "class MergerRate:\n",
     "    def __init__(self, redshift, redshift_lim = (0, 12), M_1=5e13, omega_m=0.27, omega_l=0.73, h=0.73, ns=0.95, sigma8=0.8, Nbins=50, logmass_lim=(6, 20)):\n",
     "        self.omega_m0 = omega_m\n",
     "        self.omega_l0 = omega_l\n",
