--- a/PopIII_IMF_fit.ipynb
+++ b/PopIII_IMF_fit.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,12 +68,12 @@
     "\n",
     "mpl.rcParams['axes.prop_cycle'] = cycler(color=myColors)\n",
     "\n",
-    "path_image = '/Users/antoninpantalacci/Desktop/Master Project/Papernotes and Books/images/'"
+    "path_image = '/Users/antoninpantalacci/Desktop/Master Project/Papernotes and Books/Graph/P-S/P-S/Outputs'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "Import Data from Susa\n",
     "\"\"\"\n",
-    "pathfit_susa = '/Users/antoninpantalacci/Desktop/Master Project/Papernotes and Books/Graph/Fit/Susa2014/'\n",
+    "pathfit_susa = '/Users/antoninpantalacci/Desktop/Master Project/Papernotes and Books/Graph/P-S/P-S/PopIII_data/Susa2014/'\n",
     "name_N_per_halo = 'Stars_per_minihalo'\n",
     "N_per_halos = np.rint(np.genfromtxt(pathfit_susa + 'N_per_halos' +'.csv'))\n",
     "x_bins=np.arange(1,7,1)"
@@ -415,7 +415,7 @@
     "#Hirano 2015\n",
     "name_Hirano2015 = ['Total', '10<z<14', '14<z<18', '18<z<22', '22<z<26', '26<z<30', 'Bins']\n",
     "\n",
-    "pathfit_Hirano2015= '/Users/antoninpantalacci/Desktop/Master Project/Papernotes and Books/Graph/Fit/Hirano2015/'\n",
+    "pathfit_Hirano2015= '/Users/antoninpantalacci/Desktop/Master Project/Papernotes and Books/Graph/P-S/P-S/PopIII_data/Hirano2015/'\n",
     "Hirano2015 = np.empty(len(name_Hirano2015), dtype=object)\n",
     "for i in range(len(name_Hirano2015)):\n",
     "    Hirano2015[i] = np.genfromtxt(pathfit_Hirano2015 + name_Hirano2015[i] +'.csv', delimiter=';')\n",
@@ -598,7 +598,7 @@
    ],
    "source": [
     "#Susa 2014\n",
-    "pathfit_susa = '/Users/antoninpantalacci/Desktop/Master Project/Papernotes and Books/Graph/Fit/Susa2014/'\n",
+    "pathfit_susa = '/Users/antoninpantalacci/Desktop/Master Project/Papernotes and Books/Graph/P-S/P-S/PopIII_data/Susa2014/'\n",
     "name_susa = ['Bins edges', 'Hist']\n",
     "\n",
     "Susa = np.genfromtxt(pathfit_susa + name_susa[1] +'.csv', delimiter=';')\n",
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
        "(1000000.0, 100000000000.0)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -894,7 +894,7 @@
     "IMF of the PopIII's BH remnant from Tanikawa serving as reference for this work\n",
     "\"\"\"\n",
     "\n",
-    "path_tanikawa = '/Users/antoninpantalacci/Desktop/Master Project/Papernotes and Books/Graph/Fit/'\n",
+    "path_tanikawa = '/Users/antoninpantalacci/Desktop/Master Project/Papernotes and Books/Graph/P-S/P-S/PopIII_data/'\n",
     "\n",
     "Tanikawa = np.genfromtxt(path_tanikawa + 'Tanikawa' +'.csv', delimiter=';')\n",
     "Bins_loglimit_Tanikawa = (6.5, 11)\n",
